[gd_scene load_steps=2 format=3 uid="uid://cyi5upc0vkgsu"]

[ext_resource type="Script" path="res://Games/HoldButton/main.gd" id="1_2xa32"]

[node name="HoldButton" type="Node2D"]
script = ExtResource("1_2xa32")

[node name="Button" type="Button" parent="."]
offset_left = 285.0
offset_top = 159.0
offset_right = 406.0
offset_bottom = 219.0
text = "Hold this button"

[node name="TargetTime" type="Label" parent="."]
offset_left = 280.0
offset_top = 112.0
offset_right = 320.0
offset_bottom = 135.0

[node name="ActualTime" type="Label" parent="."]
offset_left = 280.0
offset_top = 136.0
offset_right = 320.0
offset_bottom = 159.0

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_button_timer_timeout"]
